[package]
name = "htsengine-sys"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
http_req = "0.7"
sha2 = "0.9"
unwrap = "1.2"
flate2 = "1.0"
tar = "0.4"
bindgen = "0.57"

[dependencies]
