[package]
name = "tts"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio_02"]

tokio_10 = ["tokio", "reqwest", "hyper", "hyper-rustls", "yup-oauth2"]
tokio_02 = ["tokio-compat", "reqwest-compat", "hyper-compat", "hyper-rustls-compat", "yup-oauth2-compat"]

[dependencies]
log = "0.4"
thiserror = "1.0"
tempfile = "3"
rand = "0.8"
serde_json = "1.0"
async-trait = "0.1"
base64 = "0.13"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.tokio]
features = ["macros", "rt", "process", "io-util"]
optional = true
package = "tokio"
version = "1.3"

[dependencies.tokio-compat]
features = ["macros", "rt-core", "process", "io-util"]
optional = true
package = "tokio"
version = "0.2.25"

[dependencies.reqwest]
features = ["json", "gzip"]
optional = true
version = "0.11"

[dependencies.reqwest-compat]
features = ["json", "gzip"]
optional = true
package = "reqwest"
version = "0.10"

[dependencies.hyper]
package = "hyper"
version = "0.14"
optional = true

[dependencies.hyper-compat]
package = "hyper"
version = "0.13.10"
optional = true

[dependencies.yup-oauth2]
package = "yup-oauth2"
version = "5"
optional = true

[dependencies.yup-oauth2-compat]
package = "yup-oauth2"
version = "4"
optional = true

[dependencies.hyper-rustls]
package = "hyper-rustls"
version = "0.22"
optional = true

[dependencies.hyper-rustls-compat]
package = "hyper-rustls"
version = "0.21"
optional = true

[dev-dependencies]
dotenv = "0.15"
